--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-    <title>Irsyadut Thulab | Al-quran, Doa-Doa</title>
+    <title>ISLAMIAH | Al-quran, Doa-Doa</title>
     <meta name="google-site-verification" content="FJ1eOqOHKFv_1ZLrJ2Nrl0W9ovQv_P5VQKu-ATwKvGM" />
     <meta name="description"
         content="Website yang menyediakan konten konten islami seperti Al-quran, Sunnah Nabi, Doa Sehari Hari, dll. Dengan desain yang sederhana dan mudah dinavigasi, website ini bertujuan untuk memberikan akses yang lebih luas kepada umat Islam dalam mempelajari, memahami, dan mengamalkan ajaran Islam." />
