--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #fff;
+        background-color: #f8f3e6;
     }
     img {
         max-width: 100%;
