--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 </style>
 <body>
-    <img src="./assets/Irsyadu Thulab.jpg" alt="Loading...">
+    <img src="./assets/Irsyadu Thulab.png" alt="Loading...">
     <script>
         setTimeout(function () {
             window.location.href = "./pages/dashboard.html";
