--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-  <title>Irsyadut Thulab | Tentang</title>
+  <title>ISLAMIAH | Tentang</title>
   <link rel="shortcut icon" href="../assets/icon/tentang.png" />
   <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
   <link rel="stylesheet" href="../assets/css/hope-ui.min.css?v=2.0.0" />
@@ -60,10 +60,10 @@
                 <div class="col-12 mb-3">
                   <img class="float-end me-2" src="../assets/logo.png" height="155px" alt="fotos" />
                   <p class="text-start text-dark fw-bolder">
-                    Selamat datang di aplikasi Irsyadut Thulab, platform
+                    Selamat datang di aplikasi ISLAMIAH-fakta.blue, platform
                     digital yang dirancang untuk membantu umat Islam
                     dalam menjalankan ibadah dengan lebih mudah. Irsyadut
-                    Thulab hadir sebagai solusi modern untuk mendukung
+                    ISLAMIAH hadir sebagai solusi modern untuk mendukung
                     pengguna dalam mengakses informasi keagamaan secara
                     praktis. kami berharap dapat memberikan pengalaman
                     ibadah yang lebih baik dan membantu meningkatkan
@@ -78,7 +78,7 @@
                 <div class="col-lg-9 p-4">
                   <p class="fw-bold text-center text-dark p-3 border-start border-2 border-dark">
                     Tujuan kami membuat aplikasi ini agar pengguna dapat
-                    membaca Irsyadut Thulab di mana saja dan kapan saja,
+                    membaca AL-QUR'AN, Sholawat dan ibadah-ibadah lainnya di mana saja dan kapan saja,
                     tanpa harus membawa kitab fisik, terutama dalam
                     situasi darurat atau saat bepergian.Melalui fitur
                     digital, seperti pencarian cepat pengguna lebih
@@ -94,7 +94,7 @@
                       <h4 class="text-center fw-bold">Visi</h4>
                       <p class="fw-bold text-center me-3 fs-sm-6 text-dark">
                         Menyediakan akses digital yang mudah dan
-                        interaktif terhadap Irsyadut Thulab, guna
+                        interaktif terhadap Islamiah, guna
                         memfasilitasi umat Islam dalam memperdalam
                         pemahaman serta pengamalan ibadah harian melalui
                         teknologi modern.
@@ -110,11 +110,11 @@
                         1.Membangun platform digital yang user-friendly:
                         Menyediakan pengalaman pengguna yang sederhana
                         namun efisien, sehingga berbagai doa, wirid, dan
-                        dzikir dalam Irsyadut Thulab dapat diakses dengan
+                        dzikir dalam Islamiah dapat diakses dengan
                         cepat dan mudah. <br /><br />
                         2.Melestarikan tradisi Islam melalui digitalisasi:
                         Menyediakan konten autentik dan akurat dari
-                        Irsyadut Thulab, dilengkapi dengan terjemahan dan
+                        islamiah yeng dilengkapi dengan terjemahan dan
                         penjelasan yang mempermudah pemahaman.
                         <br /><br />
                         3.Membangun fitur berbagi antar pengguna, seperti
