--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -18,6 +18,11 @@
    <link rel="stylesheet" href="../assets/node_modules/sweetalert2/dist/sweetalert2.min.css">
    <script src="../assets/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
    <script defer src="../assets/api/cdn.min.js"></script>
+<script 
+    async 
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7183187126446600" 
+    crossorigin="anonymous">
+</script>
 </head>
 <style>
    .truncate-multiline {
