--- a/pages/doa.html
+++ b/pages/doa.html
@@ -14,6 +14,11 @@
   <link rel="stylesheet" href="../assets/css/customizer.min.css" />
   <link rel="stylesheet" href="../pages/style/custom.css" />
   <script defer src="../assets/api/cdn.min.js"></script>
+<script 
+    async 
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7183187126446600" 
+    crossorigin="anonymous">
+</script>
 </head>
 
 <body x-data x-init="$store.backController.init()" class="  ">
