--- a/pages/maulid.html
+++ b/pages/maulid.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
   <title>Irsyadut Thulab | Maulid Nabi</title>
   <link rel="shortcut icon" href="../assets/icon/maulid.png" />
   <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
-
   <link rel="stylesheet" href="../assets/css/hope-ui.min.css?v=2.0.0" />
   <link rel="stylesheet" href="../assets/css/custom.min.css?v=2.0.0" />
   <link rel="stylesheet" href="../assets/css/dark.min.css" />
   <link rel="stylesheet" href="../assets/css/customizer.min.css" />
   <script defer src="../assets/api/cdn.min.js"></script>
+<script 
+    async 
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7183187126446600" 
+    crossorigin="anonymous">
+</script>
 </head>
 <style></style>
 
