--- a/pages/praktek_ibadah.html
+++ b/pages/praktek_ibadah.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
   <title>Irsyadut Thulab | Praktek Ibadah</title>
   <link rel="shortcut icon" href="../assets/images/ibadah.ico" />
   <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
-
   <link rel="stylesheet" href="../assets/css/hope-ui.min.css?v=2.0.0" />
   <link rel="stylesheet" href="../assets/css/custom.min.css?v=2.0.0" />
   <link rel="stylesheet" href="../assets/css/dark.min.css" />
   <link rel="stylesheet" href="../assets/css/customizer.min.css" />
   <link rel="stylesheet" href="../pages/style/custom.css" />
   <script defer src="../assets/api/cdn.min.js"></script>
+<script 
+    async 
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7183187126446600" 
+    crossorigin="anonymous">
+</script>
 </head>
-
 <body x-data x-init="$store.backController.init()" class="  ">
   <div id="loading">
     <div class="loader simple-loader">
