--- a/pages/stream.html
+++ b/pages/stream.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-    <title>Irsyadut Thulab | Tentang</title>
+    <title>ISLAMIAH | Tentang</title>
     <link rel="shortcut icon" href="../assets/icon/tentang.png" />
     <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
-
     <link rel="stylesheet" href="../assets/css/hope-ui.min.css?v=2.0.0" />
     <link rel="stylesheet" href="../assets/css/custom.min.css?v=2.0.0" />
     <link rel="stylesheet" href="../assets/css/dark.min.css" />
@@ -17,6 +15,11 @@
     <script defer src="../assets/api/cdn.min.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="./02-connection.js"></script>
+<script 
+    async 
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7183187126446600" 
+    crossorigin="anonymous">
+</script>
 </head>
 <style>
     .truncate-multiline {
