--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -188,7 +188,7 @@
                           </path>
                         </g>
                       </svg></span><a class="ms-2 link"
-                      href="mailto:tefatie.smkaltie@gmail.com">tefatie.smkaltie@gmail.com</a>
+                      href="mailto: squadsantuy272@gmail.com">fakta-blue@gmail.com</a>
                   </div>
                   <div class="instagram">
                     <span><svg viewBox="0 0 24 24" class="icon-20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -201,8 +201,8 @@
                           <circle cx="16.5" cy="7.5" r="1.5" fill="#000000"></circle>
                           <circle cx="12" cy="12" r="3" stroke="#000000" stroke-width="2"></circle>
                         </g>
-                      </svg></span><a href="https://www.instagram.com/tefatie.pplg/"
-                      class="ms-2 link">TefatieInnovate</a>
+                      </svg></span><a href="https://www.instagram.com/sumarsonotito/"
+                      class="ms-2 link">Tito</a>
                   </div>
                   <div class="whatsapp">
                     <span><svg viewBox="0 0 448 512" class="icon-20" fill="" xmlns="http://www.w3.org/2000/svg">
@@ -215,7 +215,7 @@
                           <circle cx="16.5" cy="7.5" r="1.5" fill="#000000"></circle>
                           <circle cx="12" cy="12" r="3" stroke="#000000" stroke-width="2"></circle>
                         </g>
-                      </svg></span><a href="https://wa.me/6285938594449" class="ms-2 link">+62 859-3859-4449</a>
+                      </svg></span><a href="https://wa.me/6285938594449" class="ms-2 link">+62 896-3747-4994</a>
                   </div>
                 </div>
                 <div class="col-12 credit text-start text-dark mt-3">
@@ -236,8 +236,8 @@
                                 Data daftar surat Al-Qur'an pada aplikasi ini bersumber dari:
                               </small>
                               <br>
-                              <a target="_blank" href="https://tanzil.net" class="link text-primary">
-                                - Tanzil Project
+                              <a target="_blank" href="https://zumar.xo.je" class="link text-primary">
+                                - Squad_santuy-Projek
                               </a>
                             </li>
                             <li class="my-4">
@@ -245,9 +245,9 @@
                               <small class="text-dark fw-bold ">Saudara dapat mengunjungi tautan berikut untuk melihat
                                 sumber
                                 asli dari konten Doa-doa yang digunakan dalam aplikasi
-                                Irsyadut Thulab.</small>
+                                ISLAMIAH.</small>
                               <br>
-                              <a target="_blank" href="https://github.com/fitrahive/dua-dhikr"
+                              <a target="_blank" href="https://github.com/"
                                 class="link text-primary">
                                 - fitrahive/dua-dhikr (MIT License)
                               </a>
@@ -262,7 +262,7 @@
                               <small class="text-dark fw-bold ">Saudara dapat mengunjungi tautan berikut untuk melihat
                                 sumber
                                 asli dari konten maulid yang digunakan dalam aplikasi
-                                Irsyadut Thulab.</small>
+                                ISLAMIAH.</small>
                               <br>
                               <a target="_blank" href="https://quran.nu.or.id/maulid" class="link text-primary">
                                 - Sumber Quran.NU – NU Online</a>
@@ -271,7 +271,7 @@
                               <h2 class="modal-title fs-5 fw-bold" id="staticBackdropLabel">Konten Sunnah</h2>
                               <small class="text-dark fw-bold ">Saudara dapat mengunjungi tautan berikut untuk melihat
                                 sumber asli dari konten sunnah yang digunakan dalam aplikasi
-                                Irsyadut Thulab.</small>
+                                ISLAMIAH.</small>
                               <br>
                               <a target="_blank" href="https://kautsar.co.id/detail/sunnah-rasulullah-sehari-hari"
                                 class="link text-primary">
