--- a/pages/alquran/detail.html
+++ b/pages/alquran/detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-    <title>ISLAMIAH | Surat Al-Kausar</title>
+    <title>ISLAMIAH | Digital Qur'an dan Doa</title>
     <link rel="shortcut icon" href="../../assets/icon/pattern.png" />
     <link rel="stylesheet" href="../../assets/css/core/libs.min.css" />
 
