--- a/pages/alquran.html
+++ b/pages/alquran.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-   <title>Irsyadut Thulab | Al-Quran</title>
+   <title>ISLAMIAH | Al-Quran</title>
    <link rel="shortcut icon" href="../assets/icon/quran.png" />
    <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
 
