--- a/pages/maulid/barzanji.html
+++ b/pages/maulid/barzanji.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Irsyadut Thulab | Barzanji</title>
+   <title>ISLAMIAH | Barzanji</title>
    <link rel="shortcut icon" href="../../assets/icon/maulid.png" />
    <link rel="stylesheet" href="../../assets/css/core/libs.min.css" />
 
