--- a/pages/praktek_ibadah/rukun-wudhu.html
+++ b/pages/praktek_ibadah/rukun-wudhu.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-  <title>Irsyadut Thulab | Rukun Wudhu</title>
+  <title>ISLAMIAH | Rukun Wudhu</title>
   <link rel="shortcut icon" href="../../assets/images/ibadah.ico" />
   <link rel="stylesheet" href="../../assets/css/core/libs.min.css" />
 
