--- a/pages/sholawat/detail.html
+++ b/pages/sholawat/detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-    <title>Irsyadut Thulab | Arhamarohimin</title>
+    <title>ISLAMIAH | Arhamarohimin</title>
     <link rel="shortcut icon" href="../../assets/icon/sholawat.png" />
     <link rel="stylesheet" href="../../assets/css/core/libs.min.css" />
 
