--- a/pages/praktek_ibadah.html
+++ b/pages/praktek_ibadah.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-  <title>Irsyadut Thulab | Praktek Ibadah</title>
+  <title>ISLAMIAH | Praktek Ibadah</title>
   <link rel="shortcut icon" href="../assets/images/ibadah.ico" />
   <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
   <link rel="stylesheet" href="../assets/css/hope-ui.min.css?v=2.0.0" />
