--- a/pages/doa.html
+++ b/pages/doa.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-  <title>Irsyadut Thulab | Do'a-Do'a</title>
+  <title>ISLAMIAH | Do'a-Do'a</title>
   <link rel="shortcut icon" href="../assets/images/do'a.ico" />
   <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
 
