--- a/pages/maulid.html
+++ b/pages/maulid.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no shrink-to-fit=no">
-  <title>Irsyadut Thulab | Maulid Nabi</title>
+  <title>ISLAMIAH | Maulid Nabi</title>
   <link rel="shortcut icon" href="../assets/icon/maulid.png" />
   <link rel="stylesheet" href="../assets/css/core/libs.min.css" />
   <link rel="stylesheet" href="../assets/css/hope-ui.min.css?v=2.0.0" />
