--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -62,8 +62,7 @@
                   <p class="text-start text-dark fw-bolder">
                     Selamat datang di aplikasi ISLAMIAH-fakta.blue, platform
                     digital yang dirancang untuk membantu umat Islam
-                    dalam menjalankan ibadah dengan lebih mudah. Irsyadut
-                    ISLAMIAH hadir sebagai solusi modern untuk mendukung
+                    dalam menjalankan ibadah dengan lebih mudah. ISLAMIAH hadir sebagai solusi modern untuk mendukung
                     pengguna dalam mengakses informasi keagamaan secara
                     praktis. kami berharap dapat memberikan pengalaman
                     ibadah yang lebih baik dan membantu meningkatkan
@@ -201,7 +200,7 @@
                           <circle cx="16.5" cy="7.5" r="1.5" fill="#000000"></circle>
                           <circle cx="12" cy="12" r="3" stroke="#000000" stroke-width="2"></circle>
                         </g>
-                      </svg></span><a href="https://www.instagram.com/sumarsonotito/"
+                      </svg></span><a href="https://www.instagram.com/titozumarsono/"
                       class="ms-2 link">Tito</a>
                   </div>
                   <div class="whatsapp">
