--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -102,7 +102,7 @@
          agar serasi dengan card gradien di atas.
       */
       body {
-         background-color: #EFEFEF !important; /* Warna abu-abu netral */
+         background-color: #f8f3e6 !important; /* Warna abu-abu netral */
       }
 </style>
 
